--- a/TramiteDocumentarioOracle/web/vistas/templates/TemplateAdmin.xhtml
+++ b/TramiteDocumentarioOracle/web/vistas/templates/TemplateAdmin.xhtml
@@ -59,7 +59,7 @@
 
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">#{logeoC.user.identidad}     <span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="#">Perfil</a></li>
                                         <li><a href="#">Configuración</a></li>
